# Codename-Subspace

./: .gitignore  ADVANCED_UI_DESIGN.md  AI_IMPLEMENTATION_SUMMARY.md  AI_VOXEL_SYSTEM_IMPLEMENTATION_SUMMARY.md  BLOCK_RENDERING_FIX.md  BUILDER_UI_IMPLEMENTATION.md  CHANGELOG.md  CHANGES_SUMMARY.md  CONSOLE_INTEGRATION_SUMMARY.md  CUSTOM_UI_IMPLEMENTATION.md  DISCONNECTED_BLOCKS_FIX.md  ENHANCEMENT_SUMMARY.md  EXECUTIVE_SUMMARY.md  GAMEPLAY_FEATURES.md  GENERATION_DECISION_SUMMARY.md  GRAPHICS_ENHANCEMENT_GUIDE.md  HOW_TO_BUILD_AND_RUN.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_GENERATION_IMPROVEMENTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  LICENSE  Legacy-CSharpPrototype.sln  MAIN_MENU_IMPLEMENTATION.md  MODULAR_SHIP_3D_MODELS_IMPLEMENTATION.md  MOVEMENT_AND_GENERATION_IMPROVEMENTS.md  MULTI_LAYER_ARCHITECTURE.md  Makefile  NATIVE_WINDOWS_UI_CONSIDERATIONS.md  NEXT_STEPS.md  PERSISTENCE_GUIDE.md  PERSISTENCE_IMPLEMENTATION_SUMMARY.md  PLAYABILITY_FAQ.md  PLAYABILITY_STATUS.md  PLAYER_POD_GUIDE.md  PLAYER_UI_IMPLEMENTATION_SUMMARY.md  PLAYER_UI_VISUAL_GUIDE.md  PROCEDURAL_GENERATION_IMPLEMENTATION_SUMMARY.md  (+32 more)
AvorionLike/: AvorionLike.csproj  (+3 more)
engine/: CMakeLists.txt  README.md  SubspaceEngine.vcxproj  SubspaceEngine.vcxproj.filters
engine/_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  subspace_game
engine/include/ai/: AIDecisionSystem.h  BehaviorTree.h
engine/include/audio/: AudioDevice.h  AudioMixer.h  AudioSystem.h  SoundAsset.h  SoundBank.h  SpatialAudio.h
engine/include/building/: BuildingSystem.h
engine/include/combat/: CombatSystem.h  ShieldSystem.h
engine/include/core/: Engine.h
engine/include/equipment/: EquipmentSystem.h
engine/include/input/: Gamepad.h  InputSystem.h  Keyboard.h  Mouse.h
engine/include/navigation/: NavigationSystem.h  Pathfinding.h
engine/include/physics/: CharacterController.h
engine/include/procedural/: GalaxyGenerator.h  StarSystemGenerator.h  StargateGenerator.h
engine/include/quest/: QuestSystem.h
engine/include/rendering/: FrustumCuller.h  GLFWWindow.h  ParticleSystem.h
engine/include/rpg/: GalaxyProgressionSystem.h  PodSystem.h
engine/include/ship_editor/: ShipEditorController.h
engine/include/ships/: Block.h  ModularShipFactory.h  ShipDamage.h
engine/include/trading/: EconomyAgentSystem.h
engine/include/tutorial/: TutorialSystem.h
engine/include/ui/: UITypes.h
engine/include/voxel/: VoxelSystem.h
engine/include/waypoint/: WaypointSystem.h
engine/include/weapons/: WeaponSystem.h
engine/include/weather/: WeatherSystem.h
engine/src/: main.cpp
engine/src/ai/: AISteeringSystem.cpp  BehaviorTree.cpp
engine/src/audio/: AudioDevice.cpp  AudioMixer.cpp  AudioSystem.cpp  SoundBank.cpp  SpatialAudio.cpp
engine/src/building/: BuildingSystem.cpp
engine/src/combat/: CombatSystem.cpp  ShieldSystem.cpp
engine/src/core/: Engine.cpp
engine/src/equipment/: EquipmentSystem.cpp
engine/src/input/: Gamepad.cpp  InputSystem.cpp  Keyboard.cpp  Mouse.cpp
engine/src/navigation/: NavigationSystem.cpp
engine/src/networking/: BuildCommand.cpp
engine/src/physics/: CharacterController.cpp
engine/src/procedural/: GalaxyGenerator.cpp  StarSystemGenerator.cpp  StargateGenerator.cpp
engine/src/quest/: QuestSystem.cpp
engine/src/rendering/: FrustumCuller.cpp  GLFWWindow.cpp  ParticleSystem.cpp  ShipRenderer.cpp
engine/src/rpg/: GalaxyProgressionSystem.cpp  PodSystem.cpp
engine/src/scanning/: ScanningSystem.cpp
engine/src/ship_editor/: ShipEditorController.cpp
engine/src/ships/: Block.cpp  BlockPlacement.cpp  Blueprint.cpp  ModularShipFactory.cpp  ShipDamage.cpp
engine/src/trading/: EconomyAgentSystem.cpp
engine/src/tutorial/: TutorialSystem.cpp
engine/src/voxel/: VoxelSystem.cpp
engine/tests/: test_main.cpp
(+139 files in other folders)
